--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -49,11 +49,11 @@
                                 android:background="@drawable/circle_shape" />
 
                             <TextView
+                                android:id="@+id/txt_app_name"
                                 android:layout_width="342dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="left"
-                                android:text="@string/app_name"
                                 android:textColor="@android:color/white"
                                 android:textSize="16dp"
                                 android:layout_marginLeft="10dp"
