--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -96,12 +96,12 @@
             android:layout_marginTop="10dp" />
 
         <TextView
+            android:id="@+id/txt_app_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="sans-serif-bold"
             android:gravity="center"
-            android:text="@string/app_name"
             android:textColor="#ffffff"
             android:textSize="20sp" />
 
