--- a/app/src/main/res/layout/kseb_success_popup.xml
+++ b/app/src/main/res/layout/kseb_success_popup.xml
@@ -151,18 +151,39 @@
                         android:layout_marginLeft="50dp"
                         android:text=""/>
 
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:id="@+id/txtvAcntno"
-                        android:layout_weight="1"
-                        android:textStyle="bold"
-                        android:layout_below="@id/txtpfrom"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:layout_marginLeft="50dp"
-                        android:text="">
-                    </TextView>
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_marginTop="5dp"
+                            android:id="@+id/txtvAcntno"
+                            android:textStyle="bold"
+                            android:layout_below="@id/txtpfrom"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginLeft="50dp"
+                            android:text="dsre"/>
+
+                        <ImageView
+                            android:id="@+id/img_hdAccount"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:layout_marginRight="15dp"
+                            android:background="@drawable/visibility_eye"
+                            android:layout_margin="5dp"
+                            android:textStyle="bold"
+                            android:textSize="18sp" />
+
+                    </LinearLayout>
+
+
+
+
                     <TextView
                         android:id="@+id/txtvbranch"
                         android:layout_marginTop="5dp"
