--- a/app/src/main/res/layout/kseb_success_popup.xml
+++ b/app/src/main/res/layout/kseb_success_popup.xml
@@ -169,15 +169,15 @@
 
                         <ImageView
                             android:id="@+id/img_hdAccount"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:gravity="center"
+                            android:layout_margin="5dp"
                             android:layout_marginRight="15dp"
                             android:background="@drawable/visibility_eye"
-                            android:layout_margin="5dp"
-                            android:textStyle="bold"
-                            android:textSize="18sp" />
+                            android:gravity="center"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
@@ -192,7 +192,7 @@
                         android:textColor="@color/black"
                         android:layout_marginLeft="50dp"
                         android:layout_weight="1"
-                        android:text=""></TextView>
+                        android:text="dfdfdfdfdf"></TextView>
                 </LinearLayout>
 
                 <LinearLayout
