KSEB COMMISSION AMOUNT CHANGES

--- a/app/src/main/res/layout/activity_kseb.xml
+++ b/app/src/main/res/layout/activity_kseb.xml
@@ -331,6 +331,7 @@
                                 android:textColor="@color/Green"
                                 android:textColorHint="@color/text_primary"
                                 android:textSize="22dp"
+                                android:text=""
                                 android:textStyle="bold" />
 
                             <TextView
