--- a/app/src/main/res/layout/activity_pin_login.xml
+++ b/app/src/main/res/layout/activity_pin_login.xml
@@ -70,27 +70,27 @@
                         android:id="@+id/img_share"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="10dp"
                         android:contentDescription="@string/share"
-                        android:src="@drawable/ic_share"
-                        />
+                        android:src="@drawable/ic_share" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignBottom="@id/img_share"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="5dp"
                         android:layout_marginEnd="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="5dp"
                         android:text="@string/share"
-                        android:textColor="@color/blue_variant1"/>
+                        android:textColor="@color/blue_variant1" />
 
                 </RelativeLayout>
 
