--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -80,7 +80,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:textColor="@android:color/white"
-                                    android:text="Customer Name :"
+                                    android:text=""
                                     android:textSize="12dp"
                                     android:layout_weight="1"
                                     android:gravity="start"/>
@@ -112,7 +112,7 @@
                                 android:layout_gravity="center"
                                 android:layout_margin="10dp"
                                 android:gravity="center"
-                                android:text="WALLET BALANCE ON "
+                                android:text=""
                                 android:textColor="@android:color/white"
                                 android:textSize="13dp" />
                             <TextView
